# Leksara

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml  python-package.yml  python-publish.yml
docs/: api.md  benchmarks.md  examples.md  features.md  index.md  presets.md  usage.md
leksara/: __init__.py  clean.py  cleaning.py  miner.py  patterns.py  pii.py  pipeline.py  presets.py  review_cleaner.py  review_miner.py  user_brush.py  utils.py  version.py
leksara/cartboard/: __init__.py  flags.py  frame.py
leksara/core/: chain.py  logging.py  presets.py
leksara/data/: stopwords_id.txt
leksara/frames/: cartboard.py
leksara/functions/: __init__.py  cartboard.py  cleaning.py  miner.py  normalize_repeated.py  normalize_whitespace.py  pii.py  pipeline.py  presets.py  remove_digits.py  remove_punctuation.py  stopwords.py
leksara/review_chain/: __init__.py  benchmark.py  pipeline.py  schemas.py
leksara/tests/: test_cartboard_orchestrators.py  test_chain.py  test_patterns_pii.py  test_review_advanced.py
leksara/utils/: __init__.py  io.py  regex_cache.py  regexes.py  text.py  unicode.py  whitelist.py
notebooks/: leksara_full_feature_tests.ipynb  leksara_quickstart.ipynb
project_name/: __init__.py  clean.py  presets.py  utils.py
project_name/functions/: __init__.py  normalize_repeated.py  normalize_whitespace.py  remove_digits.py  remove_punctuation.py  stopwords.py  strip_html.py  to_lowercase.py
tests/: conftest.py  test_clean.py  test_normalize_repeated.py  test_presets.py  test_utils.py
(+33 files in other folders)
